# string-view-lite

./: .gitattributes  .gitignore  .tgitconfig  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.py
.github/workflows/: ci.yml
example/: 01-basic.cpp  02-no-exceptions.cpp  CMakeLists.txt
include/nonstd/: string_view.hpp
project/CodeBlocks/: string-view-lite.cbp  string-view-lite.workspace
script/: create-cov-rpt.py  create-vcpkg.py  update-version.py  upload-conan.py
test/: CMakeLists.txt  lest_cpp03.hpp  string-view-lite.t.cpp  string-view-lite.t.h  string-view-main.t.cpp  string-view-main.t.hpp  string-view.t.cpp  string_view-main.t.cpp  string_view-main.t.hpp  string_view.t.cpp  t.bat  tc-cl.bat  tc.bat  tg.bat
test/nonstd/: string_view.tweak.hpp
